Removed `width: 100%` from `.navbar-list li` to fix layout issue where `li` elements shrink

--- a/src/components/navbar/structure.css
+++ b/src/components/navbar/structure.css
@@ -1,8 +1,4 @@
 @utility navbar-list {
   display: flex;
   width: 100%;
-
-  & > :where(.navbar-list > li) {
-    width: 100%;
-  }
 }
